8286277: CDS VerifyError when calling clone() on object array

Backport-of: 646c8aaeeccb494c72ff84c6e0f303f790be0ba9